<resources>
    <string name="app_name">App090816Registration</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="keepLogged">Keep Me Logged In</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="registerMe">Register Me!</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="passNotEqual">Passwords are not equal</string>
    <string name="regSuccess">Registration Successful</string>
    <string name="emailIsUsed">Current e-mail is already used</string>
    <string name="noConnection">No Connection With Server</string>
    <string name="connectingToServer">Connecting To Server...</string>
    <string name="wrongPass">Wrong Password</string>
    <string name="wrongEmail">Wrong Email</string>
    <string name="inputRName">Please, input right name</string>
    <string name="inputREmail">Please, input right E-mail</string>
    <string name="inputRPass">Please, right valid password</string>
    <string name="inputRConfPass">Please, input valid confirmation password</string>
    <string name="infoAboutRightPass">Right E-mail should have from 5 to 16 characters</string>
    <string name="send">Send</string>
    <string name="enterMsg">Enter your message here...</string>
    <string name="startChat">Start Chat</string>
    <string name="call">Call</string>

</resources>
