<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/reg_etName"
        android:hint="@string/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/reg_etEmail"
        android:hint="@string/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/reg_etName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/sign_etPassword"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/reg_etEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/reg_etConfirmPassword"
        android:hint="@string/confirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/sign_etPassword"
        android:layout_alignLeft="@+id/sign_etPassword"
        android:layout_alignStart="@+id/sign_etPassword" />

    <Button
        android:id="@+id/reg_btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerMe"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_tvWrongConfPass"
        android:textColor="@color/colorRed"
        android:layout_below="@+id/reg_etConfirmPassword"
        android:layout_centerHorizontal="true" />


</RelativeLayout>