<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogInAndRegistration.MainActivity">


    <EditText
        android:id="@+id/sign_etEmail"
        android:hint="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="160dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/sign_etPassword"
        android:layout_alignStart="@+id/sign_etPassword" />

    <EditText
        android:id="@+id/sign_etPassword"
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/sign_etEmail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/register"
        android:clickable="true"
        android:textColor="@color/colorMyBlue"
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:enabled="false"
        android:id="@+id/sign_btnSignIn"
        android:layout_above="@+id/tvRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

    <CheckBox
        android:id="@+id/sign_cbKeepLogged"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keepLogged"
        android:layout_below="@+id/sign_etPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_tvRegSucc"
        android:textColor="@color/colorGreen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <TextView
        android:id="@+id/sign_tvConnectionInfo"
        android:textColor="@color/colorGray"
        android:text="@string/connectingToServer"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_tvRegSucc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/sign_tvLoginInfo"
        android:textColor="@color/colorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/sign_btnSignIn"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
